syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message CalculateAverageRequest{
    int32 number = 1;
}

message CalculateAverageResponse{
    double average =1;
}

message FindMaximumRequest {
    int32 number=1;
}

message FindMaximumResponse {
    int32 max_number = 1;
}

service CalculatorService{
    rpc computeAverage(stream CalculateAverageRequest) returns (CalculateAverageResponse);

    rpc findMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse);
}